# crc

./: .drone.jsonnet  CMakeLists.txt  appveyor.yml  build.jam  crc_example.cpp  index.html
.drone/: drone.sh
.github/workflows/: ci.yml
include/boost/: crc.hpp
test/: CMakeLists.txt  Jamfile.v2  crc_test.cpp  crc_test2.cpp
test/cmake_subdir_test/: CMakeLists.txt
